rs/sol-client-gen/tests/snapshots/generator__sol_client_generation_basic.snap
---
source: rs/sol-client-gen/tests/generator.rs
assertion_line: 31
expression: code
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
#[allow(unused_imports)]
#[macro_export]
macro_rules! io_struct_sol_impl {
    (
        $name:ident ( $( $param:ident : $ty:ty ),* ) -> $reply:ty,
        $entry_id:expr,
        $interface_id:expr,
        $selector_prefix:expr,
        $selector_name:expr
    ) => {
        pub struct $name(());

        impl $name {
            fn selector() -> [u8; 4] {
                let mut s = String::from($selector_prefix);
                s.push_str($selector_name);
                s.push_str(<<Self as ServiceCall>::Params::SolType as alloy_sol_types::SolType>::SOL_NAME);
                let selector = solidity::selector(s);
                selector.into()
            }

            pub fn encode_call(route_idx: u8, $( $param: $ty, )* ) -> Vec<u8> {
                <$name as ServiceCall>::encode_params_with_header(route_idx, &(false, $( $param, )* ))
            }

            pub fn decode_reply(route_idx: u8, payload: impl AsRef<[u8]>) -> Result<$reply, scale_codec::Error> {
                <$name as ServiceCall>::decode_reply_with_header(route_idx, payload)
            }
        }

        impl Identifiable for $name {
            const INTERFACE_ID: InterfaceId = $interface_id;
        }

        impl MethodMeta for $name {
            const ENTRY_ID: u16 = $entry_id;
        }

        impl ServiceCall for $name {
            type Params = (bool, $( $ty, )* );
            type Reply = $reply;

            fn encode_params_with_header(_route_idx: u8, value: &Self::Params) -> Vec<u8> {
                let mut payload = Self::selector().to_vec();
                payload.extend(alloy_sol_types::SolValue::abi_encode_sequence(value));
                payload
            }

            fn decode_reply_with_header(
                _route_idx: u8,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self::Reply, parity_scale_codec::Error> {
                alloy_sol_types::SolValue::abi_decode(payload.as_ref(), true)
                    .map_err(|_| parity_scale_codec::Error::from("Failed to decode ABI reply"))
            }
        }
    };
}

#[allow(unused_imports)]
use sails_rs::alloy_sol_types;
#[allow(unused_imports)]
use sails_rs::alloy_sol_types::SolValue;
#[allow(unused_imports)]
use sails_rs::solidity;
use sails_rs::{client::*, collections::*, prelude::*};
pub struct EthAppProgram;

impl EthAppProgram {
    pub const ROUTE_ID_SVC_1: u8 = 1;
}

impl sails_rs::client::Program for EthAppProgram {}

pub trait EthApp {
    type Env: sails_rs::client::GearEnv;
    fn svc_1(&self) -> sails_rs::client::Service<svc_1::Svc1Impl, Self::Env>;
}

impl<E: sails_rs::client::GearEnv> EthApp for sails_rs::client::Actor<EthAppProgram, E> {
    type Env = E;
    fn svc_1(&self) -> sails_rs::client::Service<svc_1::Svc1Impl, Self::Env> {
        self.service(EthAppProgram::ROUTE_ID_SVC_1)
    }
}
pub trait EthAppCtors {
    type Env: sails_rs::client::GearEnv;
    fn create_prg(
        self,
        p1: bool,
    ) -> sails_rs::client::PendingCtor<EthAppProgram, io::CreatePrg, Self::Env>;
}

impl<E: sails_rs::client::GearEnv> EthAppCtors for sails_rs::client::Deployment<EthAppProgram, E> {
    type Env = E;
    fn create_prg(
        self,
        p1: bool,
    ) -> sails_rs::client::PendingCtor<EthAppProgram, io::CreatePrg, Self::Env> {
        self.pending_ctor((p1,))
    }
}

pub mod io {
    use super::*;
    io_struct_sol_impl!(CreatePrg (p1: bool) -> (), 0, sails_rs::meta::InterfaceId::zero(), "", "createPrg");
}

pub mod svc_1 {
    use super::*;

    pub trait Svc1 {
        type Env: sails_rs::client::GearEnv;
        fn do_this(
            &mut self,
            p1: bool,
            p2: u32,
            p3: String,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct Svc1Impl;

    impl sails_rs::client::Identifiable for Svc1Impl {
        const INTERFACE_ID: sails_rs::InterfaceId =
            sails_rs::InterfaceId::from_bytes_8([144, 103, 176, 13, 241, 47, 74, 3]);
    }

    impl<E: sails_rs::client::GearEnv> Svc1 for sails_rs::client::Service<Svc1Impl, E> {
        type Env = E;
        fn do_this(
            &mut self,
            p1: bool,
            p2: u32,
            p3: String,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2, p3))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            DoThis (p1: bool, p2: u32, p3: String) -> u32,
            0,
            <super::Svc1Impl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "svc1",
            "DoThis"
        );
    }
}
